# ToDoList

./: .gitignore  LICENSE  README.md
.github/workflows/: django.yml
Backend/: README.md  pyproject.toml
Backend/config/: settings.py  urls.py
Backend/tags/: models.py  serializers.py  tests.py  urls.py  views.py
Backend/tags/migrations/: 0001_initial.py  0002_alter_tag_id.py
Backend/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
Backend/tasks/migrations/: 0001_initial.py  0002_alter_task_id.py
Backend/user/: permissions.py  serializers.py  tests.py  views.py
Backend/users/: serializers.py  tests.py  urls.py  views.py
Backend/utils/: auto_swagger.py  seeds.py
Frontend/: App.tsx  README.md  app.json  package-lock.json  package.json
Frontend/components/Button/: index.tsx
Frontend/components/Input/: index.tsx
Frontend/interfaces/: token.ts  user.ts
Frontend/rotes/: Navigation.tsx
Frontend/screens/: Login.tsx
Frontend/screens/Home/: index.tsx
Frontend/screens/Login/: index.tsx
Frontend/screens/Profile/: index.tsx
Frontend/screens/Register/: index.tsx
Frontend/services/: api.ts  tokenService.ts  userService.ts
Frontend/utils/: errorMessage.ts  notifications.ts  useAccessToken.ts
