[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur S Farias",email = "artur06farias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=12.2,<1.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "markdown (>=3.8,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'python manage.py runserver'
migrations = 'python manage.py makemigrations'
migrate = 'python manage.py migrate'
test = 'python manage.py test'
